--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.3.3'
     implementation 'com.google.firebase:firebase-database:19.6.0'
     implementation platform('com.google.firebase:firebase-bom:26.8.0')
-
     implementation 'com.daimajia.easing:library:2.4@aar'
     implementation 'com.daimajia.androidanimations:library:2.4@aar'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.google.firebase:firebase-messaging:21.0.1'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
