--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.magarusapp">
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,15 +15,6 @@
         android:theme="@style/Theme.MagarusApp">
         <activity android:name=".firstplay.FirstPlayActivity"></activity>
 
-        <receiver
-            android:name=".Restarter"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="restartservice" />
-            </intent-filter>
-        </receiver>
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,16 +22,9 @@
             </intent-filter>
         </activity>
 
-        <service
-            android:name=".ServiceForInvite"
-            android:enabled="true"
-            android:exported="false"
-            android:stopWithTask="false" />
-        <service
-            android:name=".ServiceForInvite2"
-            android:enabled="true"
-            android:exported="false"
-            android:stopWithTask="false" />
+        <service android:name=".JobService1"
+            android:permission="android.permission.BIND_JOB_SERVICE"/>
+
     </application>
 
 </manifest>
