--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,13 @@ buildscript {
     repositories {
         google()
         jcenter()
+
     }
     dependencies {
 
         classpath "com.android.tools.build:gradle:4.1.2"
         classpath 'com.google.gms:google-services:4.3.5'
+
 
         def nav_version = "2.3.0-alpha04"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
@@ -21,6 +23,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
 }
 
